--- a/L3Protocal/ospf.html
+++ b/L3Protocal/ospf.html
@@ -80,14 +80,18 @@
     <div class="row" id="ospfRedis" style="max-width: 98%;">
         <div id="ospfTable" class="col-md-offset-2 col-lg-offset-2 col-md-4 col-lg-4">
             <h3 style="text-align: center;text-transform: uppercase;">ospf network</h3>
-            <div style="height: 300px;overflow-y: auto;overflow-x: hidden;">
-                <table class="table table-striped table-bordered " style="margin:0px 20px;">
+            <div>
+                <table class="table table-striped table-bordered">
                     <thead style="font-weight: bolder;">
                         <tr>
-                            <td>Network</td>
+                            <td style="width:350px;">Network</td>
                             <td>操作</td>
                         </tr>
                     </thead>
+                </table>
+            </div>
+            <div style="height: 300px;overflow-y: auto;overflow-x: hidden;margin-top: -22px;">
+                <table class="table table-striped table-bordered ">
                     <tbody id="ospfBody">
                         <!-- <tr>
                             <td>
@@ -136,17 +140,21 @@
         <div class="row" style="max-width: 1900px;">
             <div class="col-md-6 col-lg-6">
                 <h3 style="text-align: center;text-transform: uppercase;">ospf route</h3>
-                <div style="height:300px;overflow-y:auto;overflow-x: hidden;">
-                    <table class="table table-striped table-bordered " style="margin: 10px;">
+                <div>
+                    <table class="table table-striped table-bordered ">
                         <thead style="font-weight: bolder;">
                             <tr>
-                                <td>Network</td>
-                                <td>Next Hop</td>
-                                <td>Metric</td>
-                                <td>From Tag</td>
-                                <td>Time</td>
+                                <td style="width: 175px;">Network</td>
+                                <td style="width: 175px;">Next Hop</td>
+                                <td style="width: 100px;">Metric</td>
+                                <td style="width: 100px;">From Tag</td>
+                                <td >Time</td>
                             </tr>
                         </thead>
+                    </table>
+                </div>
+                <div style="height:300px;overflow-y:auto;overflow-x: hidden;margin-top: -22px;">
+                    <table class="table table-striped table-bordered ">
                         <tbody id="routeBody">
                             <!-- <tr>
                                 <td>Network</td>
@@ -161,18 +169,22 @@
             </div>
             <div class="col-md-6 col-lg-6">
                 <h3 style="text-align: center;text-transform: uppercase;">ospf database</h3>
-                <div style="height:300px;overflow-y:auto;overflow-x: hidden; margin-top: 20px;">
-                    <table class="table table-striped table-bordered " style="margin: 10px;">
+                <div>
+                    <table class="table table-striped table-bordered ">
                         <thead style="font-weight: bolder;">
                             <tr>
-                                <td>Link ID</td>
-                                <td>ADV Router</td>
-                                <td>Age</td>
-                                <td>Seq#</td>
-                                <td>CkSum</td>
+                                <td style="width: 150px;">Link ID</td>
+                                <td style="width: 150px;">ADV Router</td>
+                                <td style="width: 100px;">Age</td>
+                                <td style="width: 150px;">Seq#</td>
+                                <td style="width: 100px;">CkSum</td>
                                 <td>Route</td>
                             </tr>
                         </thead>
+                    </table>
+                </div>
+                <div style="height:300px;overflow-y:auto;overflow-x: hidden; margin-top: -22px;">
+                    <table class="table table-striped table-bordered ">
                         <tbody id="databaseBody">
                             <!-- <tr>
                                 <td><span name="txtLink" value="Link">Link ID</span></td>
@@ -188,21 +200,25 @@
             </div>
             <div class="col-md-12 col-lg-12">
                 <h3 style="text-align: center;text-transform: uppercase;">ospf neighbor</h3>
-                <div style="height:300px; overflow-y:auto;overflow-x: hidden;">
-                    <table class="table table-striped table-bordered " style="margin: 10px;">
+                <div>
+                    <table class="table table-striped table-bordered ">
                         <thead style="font-weight: bolder;">
                             <tr>
-                                <td>Neighbor Id</td>
-                                <td>Pri</td>
-                                <td>State</td>
-                                <td>Dead Time</td>
-                                <td>Address</td>
-                                <td>Interface</td>
-                                <td>RXmtL</td>
-                                <td>RqstL</td>
+                                <td style="width: 175px;">Neighbor Id</td>
+                                <td style="width: 175px;">Pri</td>
+                                <td style="width: 175px;">State</td>
+                                <td style="width: 175px;">Dead Time</td>
+                                <td style="width: 175px;">Address</td>
+                                <td style="width: 175px;">Interface</td>
+                                <td style="width: 175px;">RXmtL</td>
+                                <td style="width: 175px;">RqstL</td>
                                 <td>DBsmL</td>
                             </tr>
                         </thead>
+                    </table>            
+                </div>
+                <div style="height:300px; overflow-y:auto;overflow-x: hidden;margin-top: -22px;">
+                    <table class="table table-striped table-bordered ">
                         <tbody id="neighborBody">
                             <!-- <tr>
                                 <td><span name="txtNId">Neighbor Id</span></td>
@@ -318,7 +334,7 @@
                 html = ('');
                 for (let i = 0; i < dCount; i++) {
                     html += ('<tr>');
-                    html += ('<td><span name="txtNet" value="' + dataSet[i][0] + '">' + dataSet[i][0] + '</span></td>');
+                    html += ('<td style="width:350px;"><span name="txtNet" value="' + dataSet[i][0] + '">' + dataSet[i][0] + '</span></td>');
                     html += ('<td>');
                     html += ('<button type="button" class="btn btn-primary" style="margin-left:20px;"  name="btnDelete" value="' + dataSet[i][0] + '">删除</button>');
                     html += ('</td');
@@ -331,14 +347,14 @@
                 html = ('');
                 for (let i = 0; i < nCount; i++) {
                     html += ('<tr>');
-                    html += ('<td><span name="txtNId" value="' + neighborSet[i][0] + '">' + neighborSet[i][0] + '</span></td>');
-                    html += ('<td><span name="txtPri" value="' + neighborSet[i][1] + '">' + neighborSet[i][1] + '</span></td>');
-                    html += ('<td><span name="txtState" value="' + neighborSet[i][2] + '">' + neighborSet[i][2] + '</span></td>');
-                    html += ('<td><span name="txtDead" value="' + neighborSet[i][3] + '">' + neighborSet[i][3] + '</span></td>');
-                    html += ('<td><span name="txtAddress" value="' + neighborSet[i][4] + '">' + neighborSet[i][4] + '</span></td>');
-                    html += ('<td><span name="txtInterface" value="' + neighborSet[i][5] + '">' + neighborSet[i][5] + '</span></td>');
-                    html += ('<td><span name="txtRXmtL" value="' + neighborSet[i][6] + '">' + neighborSet[i][6] + '</span></td>');
-                    html += ('<td><span name="txtRqstL" value="' + neighborSet[i][7] + '">' + neighborSet[i][7] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtNId" value="' + neighborSet[i][0] + '">' + neighborSet[i][0] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtPri" value="' + neighborSet[i][1] + '">' + neighborSet[i][1] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtState" value="' + neighborSet[i][2] + '">' + neighborSet[i][2] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtDead" value="' + neighborSet[i][3] + '">' + neighborSet[i][3] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtAddress" value="' + neighborSet[i][4] + '">' + neighborSet[i][4] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtInterface" value="' + neighborSet[i][5] + '">' + neighborSet[i][5] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtRXmtL" value="' + neighborSet[i][6] + '">' + neighborSet[i][6] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtRqstL" value="' + neighborSet[i][7] + '">' + neighborSet[i][7] + '</span></td>');
                     html += ('<td><span name="txtDBsmL" value="' + neighborSet[i][8] + '">' + neighborSet[i][8] + '</span></td>');
                     html += ('</tr>');
                 }
@@ -349,10 +365,10 @@
                 html = ('');
                 for (let i = 0; i < rCount; i++) {
                     html += ('<tr>');
-                    html += ('<td><span name="txtNet" value="' + routeSet[i][0] + '">' + routeSet[i][0] + '</span></td>');
-                    html += ('<td><span name="txtHop" value="' + routeSet[i][1] + '">' + routeSet[i][1] + '</span></td>');
-                    html += ('<td><span name="txtMetric" value="' + routeSet[i][2] + '">' + routeSet[i][2] + '</span></td>');
-                    html += ('<td><span name="txtTag" value="' + routeSet[i][3] + '">' + routeSet[i][3] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtNet" value="' + routeSet[i][0] + '">' + routeSet[i][0] + '</span></td>');
+                    html += ('<td style="width: 175px;"><span name="txtHop" value="' + routeSet[i][1] + '">' + routeSet[i][1] + '</span></td>');
+                    html += ('<td style="width: 100px;"><span name="txtMetric" value="' + routeSet[i][2] + '">' + routeSet[i][2] + '</span></td>');
+                    html += ('<td style="width: 100px;"><span name="txtTag" value="' + routeSet[i][3] + '">' + routeSet[i][3] + '</span></td>');
                     html += ('<td><span name="txtTime" value="' + routeSet[i][4] + '">' + routeSet[i][4] + '</span></td>');
                     html += ('</tr>');
                 }
@@ -363,11 +379,11 @@
                 html = ('');
                 for (let i = 0; i < rCount; i++) {
                     html += ('<tr>');
-                    html += ('<td><span name="txtLink" value="' + databaseSet[i][0] + '">' + databaseSet[i][0] + '</span></td>');
-                    html += ('<td><span name="txtAdv" value="' + databaseSet[i][1] + '">' + databaseSet[i][1] + '</span></td>');
-                    html += ('<td><span name="txtAge" value="' + databaseSet[i][2] + '">' + databaseSet[i][2] + '</span></td>');
-                    html += ('<td><span name="txtSeq" value="' + databaseSet[i][3] + '">' + databaseSet[i][3] + '</span></td>');
-                    html += ('<td><span name="txtCkSum" value="' + databaseSet[i][4] + '">' + databaseSet[i][4] + '</span></td>');
+                    html += ('<td style="width: 150px;"><span name="txtLink" value="' + databaseSet[i][0] + '">' + databaseSet[i][0] + '</span></td>');
+                    html += ('<td style="width: 150px;"><span name="txtAdv" value="' + databaseSet[i][1] + '">' + databaseSet[i][1] + '</span></td>');
+                    html += ('<td style="width: 100px;"><span name="txtAge" value="' + databaseSet[i][2] + '">' + databaseSet[i][2] + '</span></td>');
+                    html += ('<td style="width: 150px;"><span name="txtSeq" value="' + databaseSet[i][3] + '">' + databaseSet[i][3] + '</span></td>');
+                    html += ('<td style="width: 100px;"><span name="txtCkSum" value="' + databaseSet[i][4] + '">' + databaseSet[i][4] + '</span></td>');
                     html += ('<td><span name="txtRoute" value="' + databaseSet[i][5] + '">' + databaseSet[i][5] + '</span></td>');
                     html += ('</tr>');
                 }
