--- a/L3Protocal/ospf.html
+++ b/L3Protocal/ospf.html
@@ -377,7 +377,7 @@
             let bCount = databaseSet.length;
             if (currentStatus && bCount > 0) {
                 html = ('');
-                for (let i = 0; i < rCount; i++) {
+                for (let i = 0; i < bCount; i++) {
                     html += ('<tr>');
                     html += ('<td style="width:15%;"><span name="txtLink" value="' + databaseSet[i][0] + '">' + databaseSet[i][0] + '</span></td>');
                     html += ('<td style="width: 20%;"><span name="txtAdv" value="' + databaseSet[i][1] + '">' + databaseSet[i][1] + '</span></td>');
@@ -394,12 +394,14 @@
         function checkData(route, area) {
             let flag = true;
             let regRoute = /^(?:(?:[0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}(?:[0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\/([1-9]|[1-2]\d|3[0-2])$/;
+            let regArea = /^[0-9]+$/;
             if (!regRoute.test(route)) {
                 alert("输入地址不合法");
                 flag = false;
             }
-            else if (area.trim() == "") {
-                area = 0;
+            else if(!regArea.test(area)){
+                alert("area必须为正整数");
+                flag = false;
             }
             return flag;
         }
@@ -473,6 +475,9 @@
         $("#btnOspfSave").click(function () {
             let route = $("#editNet").val();
             let area = $("#editArea").val();
+            if (area.trim() == "") {
+                area = 0;
+            }
             if (checkData(route, area)) {
                 alert("输入合法");
             }
